version 0.1.1
- Added %L>% as synonym to avoid possible confusion with pipeR::`%>>%`
- Argument 'stop' of 'dump_log' is now 'TRUE' by default (was 'FALSE')

version 0.1.0
- initial release