@@ -1,0 +1,13 @@
+context("filedump logger")
+
+test_that("filedump logging",{
+    logger <- filedump$new()
+    i2 <- start_log(iris, log=logger) 
+    i2 <- i2 %>>%  identity()    
+    i2 <- i2 %>>% {.$Sepal.Length <- .$Sepal.Length*2; .}  
+    i2 <- dump_log(i2, verbose=TRUE) 
+    expect_equal(length(dir(logger$dir)), 3)
+    # this test crashes covr but it does pass.
+    #expect_equal(length(logger$logdata()) , 3)
+})
+
